tests/ui/type-alias-impl-trait/impl_trait_for_tait_bound2.stderr
error[E0277]: the trait bound `Foo: Yay` is not satisfied
  --> $DIR/impl_trait_for_tait_bound2.rs:12:14
   |
LL |     is_yay::<Foo>();
   |              ^^^ the trait `Yay` is not implemented for `Foo`
   |
   = help: the trait `Yay` is implemented for `u32`
note: required by a bound in `is_yay`
  --> $DIR/impl_trait_for_tait_bound2.rs:15:14
   |
LL | fn is_yay<T: Yay>() {}
   |              ^^^ required by this bound in `is_yay`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
